terraform/deployments/cluster-services/modules/gatekeeper/test/suite/samples/block_ingresses/allow_whitelisted_ns/case.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-0
  namespace: jaskaran-dev
  annotations:
    external-dns.alpha.kubernetes.io/set-identifier: ing-0-default-green
spec:
  rules:
  - host: ing-0.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nginx
            port:
              number: 80
